add dependencies, main structure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -9,8 +9,16 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    dataBinding {
+        enabled = true
+    }
+
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -19,14 +27,55 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        google()
+        jcenter()
+    }
+}
+
+
+ext {
+    supportLibrary = "28.0.0"
+    daggerVersion = "2.15"
+}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$supportLibrary"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //RX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+    //Retrofit to Rx Adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    //GSON
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'org.glassfish:javax.annotation:10.0-b28'
+    //annotation for JSON to POJO converter
+    implementation 'org.glassfish:javax.annotation:10.0-b28'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    //CardView
+    implementation "com.android.support:cardview-v7:$supportLibrary"
+    //Dagger 2
+    implementation "com.google.dagger:dagger-android:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    // if you use the support libraries
+    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    api project(path: ':pinterestdownloadmanager')
 }
 repositories {
     mavenCentral()
