--- a/pinterestdownloadmanager/build.gradle
+++ b/pinterestdownloadmanager/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 28
 
-
-
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 28
@@ -33,6 +31,19 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //annotation for JSON to POJO converter
+    implementation 'org.glassfish:javax.annotation:10.0-b28'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+//    //Glide
+//    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
 repositories {
     mavenCentral()
