--- a/pinterestdownloadmanager/build.gradle
+++ b/pinterestdownloadmanager/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Volley
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
 repositories {
